@@ -1,23 +1,26 @@
 package com.onixbyte.clearledger.data.domain;
 
+import com.fasterxml.jackson.annotation.JsonIgnore;
 import lombok.Builder;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 @Builder
 public record UserDomain(
         Long userId,
         String username,
-        String password,
+        @JsonIgnore String password,
         String email
 ) implements UserDetails {
 
     @Override
-    public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of();
+    @JsonIgnore
+    public List<GrantedAuthority> getAuthorities() {
+        return Collections.emptyList();
     }
 
     @Override
@@ -28,5 +31,29 @@ public record UserDomain(
     @Override
     public String getUsername() {
         return username;
+    }
+
+    @Override
+    @JsonIgnore
+    public boolean isAccountNonExpired() {
+        return true;
+    }
+
+    @Override
+    @JsonIgnore
+    public boolean isAccountNonLocked() {
+        return true;
+    }
+
+    @Override
+    @JsonIgnore
+    public boolean isCredentialsNonExpired() {
+        return true;
+    }
+
+    @Override
+    @JsonIgnore
+    public boolean isEnabled() {
+        return true;
     }
 }
